samples/_failures_safe/1761431278_972e22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c94a1c5.c: In function ‘main’:
./samples/SAFE/__tmp_2c94a1c5.c:158:5: error: expected expression at end of input
  158 |     if (a < 0 ||
      |     ^~
./samples/SAFE/__tmp_2c94a1c5.c:158:5: error: expected declaration or statement at end of input
